--- a/app.html
+++ b/app.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <head>
     <title>AngularJS Auth Module SAP</title>
@@ -25,7 +25,7 @@
 <body>
     <div ng-app="AlanAuthTestApp">
     
-        <div ng-controller="BodyCtrl">
+        <div ng-controller="BodyCtrl as body">
 			<ul class="breadcrumb">
 				<li> <a href="#/">Home</a> </li>
 				<li> <a href="#/login">Log In</a> </li>
@@ -33,7 +33,7 @@
 				<li> <a href="#/employee">Employee</a> </li>
 				<li> <a href="#/salary">Salary</a> </li>
 				<li> <a href="#/logout">Log Out</a> </li>
-				<li> 当前用户角色: {{main.user.role}} </li>
+				<li> 当前用户角色: {{body.user.role}} </li>
 			</ul>
 			<div ng-view></div>
         </div>
