--- a/app.html
+++ b/app.html
@@ -27,16 +27,19 @@
     
         <div ng-controller="BodyCtrl as body">
 			<ul class="breadcrumb">
-				<li> <a href="#/">Home</a> </li>
-				<li> <a href="#/login">Log In</a> </li>
-				<li> <a href="#/personal">Personal</a> </li>
-				<li> <a href="#/employee">Employee</a> </li>
-				<li> <a href="#/salary">Salary</a> </li>
-				<li> <a href="#/logout">Log Out</a> </li>
+				<li> <a href="#/">首页</a> </li>
+				<li> <a href="#/login">登陆</a> </li>
+				<li> <a href="#/personal">个人主页</a> </li>
+				<li> <a href="#/employee">员工列表</a> </li>
+				<li> <a href="#/salary">薪资查询</a> </li>
+				<li> <a href="#/logout">退出登陆</a> </li>
 				<li> 当前用户角色: {{body.user.role}} </li>
 			</ul>
 			<div ng-view></div>
         </div>
+		<div>
+			<a href="https://github.com/Allen-Wei/angular-alan-auth/tree/gh-pages">Demo 源码</a> &nbsp; &nbsp; <a href="https://github.com/Allen-Wei/angular-alan-auth">认证模块源码</a>
+		</div>
     </div>
 </body>
 
