--- a/app.html
+++ b/app.html
@@ -37,8 +37,12 @@
 			</ul>
 			<div ng-view></div>
         </div>
-		<div>
-			<a href="https://github.com/Allen-Wei/angular-alan-auth/tree/gh-pages">Demo 源码</a> &nbsp; &nbsp; <a href="https://github.com/Allen-Wei/angular-alan-auth">认证模块源码</a>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12">
+					<a href="https://github.com/Allen-Wei/angular-alan-auth/tree/gh-pages">Demo 源码</a> &nbsp; &nbsp; <a href="https://github.com/Allen-Wei/angular-alan-auth">认证模块源码</a>
+			</div>
+			</div>
 		</div>
     </div>
 </body>
