--- a/app.html
+++ b/app.html
@@ -1,6 +1,7 @@
 ﻿<html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AngularJS Auth Module SAP</title>
     <script src="vendor/angular.js"></script>
     <script src="vendor/angular-route.js"></script>
