--- a/ngRoute/app.html
+++ b/ngRoute/app.html
@@ -7,7 +7,7 @@
     <script src="vendor/angular-route.js"></script>
     <link href="styles/bootstrap.min.css" rel="stylesheet" />
     <script src="app.js"></script>
-    <script src="https://cdn.rawgit.com/Allen-Wei/angular-alan-auth/master/src/alan-auth.js"></script>
+    <script src="https://cdn.rawgit.com/Allen-Wei/angular-alan-auth/master/src/alan-auth.ngRoute.js"></script>
 
     <script src="routes/routes.js"></script>
     <script src="services/services.js"></script>
