--- a/ui.router/app.html
+++ b/ui.router/app.html
@@ -6,7 +6,7 @@
     <link href="styles/bootstrap.min.css" rel="stylesheet" />
     <script src="vendor/angular.js"></script>
     <script src="vendor/angular-ui-router-v0.2.18.js"></script>
-    <script src="vendor/alan-auth.js"></script>
+    <script src="https://cdn.rawgit.com/Allen-Wei/angular-alan-auth/master/src/alan-auth.ui-router.js"></script>
     <script src="nodejs.api.json.js"></script>
 </head>
 <body ng-app="UiRouterDemo">
